src/ui/snapshot_tests/snapshots/workbridge__ui__snapshot_tests__part1__empty_app_with_status_message.snap
---
source: src/ui.rs
expression: "render(&mut app, 80, 24)"
---
  List    Board    Dashboard                                   Tab: switch view
┌ Work Items (0) ───────┐┌ Session ────────────────────────────────────────────┐
│                       ││                                                     │
│  No work items.       ││  Welcome to workbridge                              │
│                       ││                                                     │
│  Ctrl+N: quick start  ││  Ctrl+N    - Quick start session                    │
│  Ctrl+B: backlog ticke││  Ctrl+B    - New backlog ticket                     │
│                       ││  Ctrl+R    - Refresh GitHub data                    │
│                       ││  Up/Down   - Navigate items                         │
│                       ││  Enter     - Open session / Import                  │
│                       ││  o         - Open PR in browser                     │
│                       ││  Ctrl+]    - Return to item list                    │
│                       ││  Ctrl+G    - Global assistant                       │
│                       ││  Ctrl+D    - Delete work item                       │
│                       ││  ?         - Settings                               │
│                       ││  Q/Ctrl+Q  - Quit                                   │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
Press Ctrl+N to create a work item
