src/ui/snapshot_tests/snapshots/workbridge__ui__snapshot_tests__part1__panel_title_shows_item_count.snap
---
source: src/ui.rs
expression: "render(&mut app, 80, 24)"
---
  List    Board    Dashboard                                   Tab: switch view
┌ Work Items (3) ───────┐┌ Session ────────────────────────────────────────────┐
│  ACTIVE (0) (1)       ││                                                     │
│> [IM] Second item     ││  Second item                                        │
│  branch-b [no wt]     ││                                                     │
│  BACKLOGGED (0) (2)   ││  Status      Implementing                           │
│  [BL] First item      ││  Backend     Local file                             │
│  branch-a [no wt]     ││  Repo        /repo/b/0                              │
│  [BL] Third item      ││  Branch      branch-b                               │
│  branch-c [no wt]     ││  Worktree    (none)                                 │
│                       ││  PR          (none)                                 │
│                       ││  Issue       (none)                                 │
│                       ││  Errors      (none)                                 │
│                       ││                                                     │
│                       ││  Press c (Claude) or x (Codex) to start a session.  │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
Second item | [Implementing] | 0
