src/ui/snapshot_tests/snapshots/workbridge__ui__snapshot_tests__part1__review_request_pr_selected.snap
---
source: src/ui.rs
expression: "render(&mut app, 80, 24)"
---
  List    Board    Dashboard                                   Tab: switch view
┌ Work Items (0) ───────┐┌ Session ────────────────────────────────────────────┐
│  REVIEW REQUESTS (1)  ││                                                     │
│> R Refactor      PR#77││  Refactor auth middleware                           │
│    auth middleware    ││                                                     │
│                       ││  PR          #77 https://github.com/o/r/pull/77     │
│                       ││  Repo        /repo/upstream                         │
│                       ││  Branch      refactor-auth                          │
│                       ││  State       Open                                   │
│                       ││  Draft       No                                     │
│                       ││  Review      Pending                                │
│                       ││  Checks      Passing                                │
│                       ││                                                     │
│                       ││  Press Enter to import this review request as a work│
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
