src/ui/snapshot_tests/snapshots/workbridge__ui__snapshot_tests__part1__work_item_context_bar_no_labels.snap
---
source: src/ui.rs
expression: "render(&mut app, 80, 24)"
---
  List    Board    Dashboard                                   Tab: switch view
┌ Work Items (1) ───────┐┌ Session ────────────────────────────────────────────┐
│  BACKLOGGED (0) (1)   ││                                                     │
│> [BL] Add             ││  Add authentication                                 │
│  authentication       ││                                                     │
│  branch-ctx-2 [no wt] ││  Status      Backlog                                │
│                       ││  Backend     Local file                             │
│                       ││  Repo        /repo/ctx-2/0                          │
│                       ││  Branch      branch-ctx-2                           │
│                       ││  Worktree    (none)                                 │
│                       ││  PR          (none)                                 │
│                       ││  Issue       (none)                                 │
│                       ││  Errors      (none)                                 │
│                       ││                                                     │
│                       ││  Press c (Claude) or x (Codex) to                   │
│                       ││  begin planning.                                    │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
Add authentication | [Backlog] | 0
