src/ui/snapshot_tests/snapshots/workbridge__ui__snapshot_tests__part1__work_item_context_bar_with_status.snap
---
source: src/ui.rs
expression: "render(&mut app, 80, 24)"
---
  List    Board    Dashboard                                   Tab: switch view
┌ Work Items (1) ───────┐┌ Session ────────────────────────────────────────────┐
│  BACKLOGGED (0) (1)   ││                                                     │
│> [BL] Fix resize bug  ││  Fix resize bug                                     │
│  branch-ctx-3 [no wt] ││                                                     │
│                       ││  Status      Backlog                                │
│                       ││  Backend     Local file                             │
│                       ││  Repo        /repo/ctx-3/0                          │
│                       ││  Branch      branch-ctx-3                           │
│                       ││  Worktree    (none)                                 │
│                       ││  PR          (none)                                 │
│                       ││  Issue       #42 - Fix resize bug                   │
│                       ││  Errors      (none)                                 │
│                       ││                                                     │
│                       ││  Press c (Claude) or x (Codex) to                   │
│                       ││  begin planning.                                    │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
Fix resize bug | [Backlog] | 0 | bug
Right panel focused - press Ctrl+] to return
