src/ui/snapshot_tests/snapshots/workbridge__ui__snapshot_tests__part1__work_item_selected_no_session.snap
---
source: src/ui.rs
expression: "render(&mut app, 80, 24)"
---
  List    Board    Dashboard                                   Tab: switch view
┌ Work Items (1) ───────┐┌ Session ────────────────────────────────────────────┐
│  BACKLOGGED (0) (1)   ││                                                     │
│> [BL] Fix     PR#14 ok││  Fix authentication bug                             │
│  authentication bug   ││                                                     │
│  branch-todo-1 [no wt]││  Status      Backlog                                │
│                       ││  Backend     Local file                             │
│                       ││  Repo        /repo/todo-1/0                         │
│                       ││  Branch      branch-todo-1                          │
│                       ││  Worktree    (none)                                 │
│                       ││  PR          #14 - PR #14                           │
│                       ││  Issue       (none)                                 │
│                       ││  Errors      (none)                                 │
│                       ││                                                     │
│                       ││  PR URL                                             │
│                       ││  https://github.com/o/r/pull/14                     │
│                       ││                                                     │
│                       ││  Press c (Claude) or x (Codex) to                   │
│                       ││  begin planning.                                    │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
Fix authentication bug | [Backlog] | 0
